//----------------------------------------------------------------------------------------

syntax = "proto3";

package Nirge.Core;
option csharp_namespace = "Nirge.Core";

import "google/protobuf/descriptor.proto";

//----------------------------------------------------------------------------------------

message RpcServiceOption
{
    int32 Uid = 1;
}

message RpcServiceCallOption
{
    int32 Uid = 1;
    bool IsOneWay = 2;
}

extend google.protobuf.ServiceOptions
{
    RpcServiceOption RpcService = 60101;
}

extend google.protobuf.MethodOptions
{
    RpcServiceCallOption RpcServiceCall = 60201;
}

//----------------------------------------------------------------------------------------

message RpcCallArgsEmpty
{
}

message RpcCallReq
{
    uint64 Serial = 1;
    int32 Service = 2;
    int32 Call = 3;
    bytes Args = 4;
}

message RpcCallRsp
{
    uint64 Serial = 1;
    int32 Service = 2;
    int32 Call = 3;
    bytes Ret = 4;
}

message RpcCallExceptionRsp
{
    uint64 Serial = 1;
    int32 Service = 2;
    int32 Call = 3;
    int32 Exception = 4;
}

//----------------------------------------------------------------------------------------
